# adventofcode

./: .gitignore  README.md  meson.build
2022/: meson.build
2022/subprojects/day1/: main.rs  meson.build
2022/subprojects/day2/: main.rs
2022/subprojects/day2.1/: main.rs  meson.build
2022/subprojects/day3/: main.rs  meson.build
2022/subprojects/day3.1/: main.rs  meson.build
2022/subprojects/day4/: main.rs  meson.build
2022/subprojects/day4.1/: main.rs  meson.build
2022/subprojects/day5/: main.rs  meson.build
2022/subprojects/day5.1/: main.rs  meson.build
2022/subprojects/day6/: main.rs  meson.build
2022/subprojects/day6.1/: main.rs  meson.build
2022/subprojects/day7/: main.rs  meson.build
2022/subprojects/day7.1/: main.rs  meson.build
2022/subprojects/day8/: main.rs  meson.build
2022/subprojects/day8.1/: main.rs  meson.build
subprojects/2021/: meson.build
subprojects/2021/subprojects/day10/: main.c
subprojects/2021/subprojects/day10.1/: main.c  meson.build
subprojects/2021/subprojects/day11.1/: main.c
subprojects/2021/subprojects/day12/: meson.build
subprojects/2021/subprojects/day13/: main.c
subprojects/2021/subprojects/day13.1/: main.c  meson.build
subprojects/2021/subprojects/day14/: main.c  meson.build
subprojects/2021/subprojects/day14.1/: main.c
subprojects/2021/subprojects/day15.1/: arnold  meson.build
subprojects/2021/subprojects/day16/: main.c  meson.build
subprojects/2021/subprojects/day16.1/: main.c
subprojects/2021/subprojects/day17/: main.c  (+1 more)
subprojects/2021/subprojects/day17.1/: main.c  meson.build
(+68 files in other folders)
