project('2022', 'rust')

subproject('day1')
subproject('day1.1')
subproject('day2')
subproject('day2.1')
subproject('day3')
subproject('day3.1')
subproject('day4')
subproject('day4.1')
subproject('day5')
subproject('day5.1')
subproject('day6')
subproject('day6.1')
subproject('day7')
subproject('day7.1')
subproject('day8')
