project('2021', 'c')

subproject('day1')
subproject('day1.1')
subproject('day2')
subproject('day2.1')
subproject('day3')
subproject('day3.1')
subproject('day4')
subproject('day4.1')
subproject('day5')
subproject('day5.1')
subproject('day6')
subproject('day6.1')
subproject('day7')
subproject('day7.1')
subproject('day8')
subproject('day8.1')
subproject('day9')
subproject('day9.1')
subproject('day10')
subproject('day10.1')
subproject('day11')
subproject('day11.1')
subproject('day12')
subproject('day12.1')
subproject('day13')
subproject('day13.1')
subproject('day14')
subproject('day14.1')
subproject('day15')
subproject('day15.1')
subproject('day16')
subproject('day16.1')
